Bug 733448 - Fix compiler warnings in mailnews/base/src/nsMsgDBView.cpp. r=bienvenu