mailnews/base/src/nsMsgDBView.cpp
@@ -929,11 +929,11 @@ nsresult nsMsgDBView::FetchRowKeywords(nsMsgViewIndex aRow, nsIMsgDBHdr *aHdr,
         thread->GetNumChildren(&numChildren);
         nsCOMPtr<nsIMsgDBHdr> msgHdr;
         nsCString moreKeywords;
-        for (long index = 0; index < numChildren; index++)
+        for (PRUint32 index = 0; index < numChildren; index++)
         {
           thread->GetChildHdrAt(index, getter_AddRefs(msgHdr));
           rv = FetchKeywords(msgHdr, moreKeywords);
-          NS_ENSURE_SUCCESS(rv,rv);
+          NS_ENSURE_SUCCESS(rv, rv);
 
           if (!keywordString.IsEmpty() && !moreKeywords.IsEmpty())
             keywordString.Append(' ');
@@ -1942,7 +1942,7 @@ void nsMsgDBView::RememberDeletedMsgHdr(nsIMsgDBHdr *msgHdr)
   else
     mRecentlyDeletedMsgIds[mRecentlyDeletedArrayIndex] = messageId;
   // only remember last 20 deleted msgs.
-  mRecentlyDeletedArrayIndex = ++mRecentlyDeletedArrayIndex % 20;
+  mRecentlyDeletedArrayIndex = (mRecentlyDeletedArrayIndex + 1) % 20;
 }
 
 bool nsMsgDBView::WasHdrRecentlyDeleted(nsIMsgDBHdr *msgHdr)
@@ -4171,7 +4171,7 @@ void nsMsgDBView::PushSort(const MsgViewSortColumnInfo &newSort)
 nsresult
 nsMsgDBView::GetCollationKey(nsIMsgDBHdr *msgHdr, nsMsgViewSortTypeValue sortType, PRUint8 **result, PRUint32 *len, nsIMsgCustomColumnHandler* colHandler)
 {
-  nsresult rv;
+  nsresult rv = NS_ERROR_UNEXPECTED;
   NS_ENSURE_ARG_POINTER(msgHdr);
   NS_ENSURE_ARG_POINTER(result);
 
@@ -4251,8 +4251,8 @@ nsMsgDBView::GetCollationKey(nsIMsgDBHdr *msgHdr, nsMsgViewSortTypeValue sortTyp
       }
       else
       {
-        NS_ASSERTION(false,"should not be here (Sort Type: byCustom (String), but no custom handler)");
-        //rv = NS_ERROR_UNEXPECTED;
+        NS_ERROR("should not be here (Sort Type: byCustom (String), but no custom handler)");
+        rv = NS_ERROR_UNEXPECTED;
       }
       break;
     default:
@@ -4811,7 +4811,7 @@ nsMsgViewIndex nsMsgDBView::FindHdr(nsIMsgDBHdr *msgHdr, nsMsgViewIndex startInd
   return viewIndex;
 }
 
-nsMsgViewIndex  nsMsgDBView::FindKey(nsMsgKey key, bool expand)
+nsMsgViewIndex nsMsgDBView::FindKey(nsMsgKey key, bool expand)
 {
   nsMsgViewIndex retIndex = nsMsgViewIndex_None;
   retIndex = (nsMsgViewIndex) (m_keys.IndexOf(key));
@@ -4829,8 +4829,9 @@ nsMsgViewIndex  nsMsgDBView::FindKey(nsMsgKey key, bool expand)
       if (threadIndex != nsMsgViewIndex_None)
       {
         PRUint32 flags = m_flags[threadIndex];
-        if ((flags & nsMsgMessageFlags::Elided) && NS_SUCCEEDED(ExpandByIndex(threadIndex, nsnull))
-          || (flags & MSG_VIEW_FLAG_DUMMY))
+        if (((flags & nsMsgMessageFlags::Elided) &&
+             NS_SUCCEEDED(ExpandByIndex(threadIndex, nsnull)))
+            || (flags & MSG_VIEW_FLAG_DUMMY))
           retIndex = (nsMsgViewIndex) m_keys.IndexOf(key, threadIndex + 1);
       }
     }
@@ -7095,7 +7096,8 @@ nsMsgDBView::GetMsgToSelectAfterDelete(nsMsgViewIndex *msgToSelectAfterDelete)
   *msgToSelectAfterDelete = nsMsgViewIndex_None;
 
   bool isMultiSelect = false;
-  PRInt32 startFirstRange, endFirstRange = nsMsgViewIndex_None;
+  PRInt32 startFirstRange = nsMsgViewIndex_None;
+  PRInt32 endFirstRange = nsMsgViewIndex_None;
   if (!mTreeSelection)
   {
     // If we don't have a tree selection then we must be in stand alone mode.
@@ -7111,9 +7113,9 @@ nsMsgDBView::GetMsgToSelectAfterDelete(nsMsgViewIndex *msgToSelectAfterDelete)
     for (PRInt32 i = 0; i < selectionCount; i++)
     {
       rv = mTreeSelection->GetRangeAt(i, &startRange, &endRange);
-      
+
       // save off the first range in case we need it later 
-      if (i == 0) {          
+      if (i == 0) {
         startFirstRange = startRange;
         endFirstRange = endRange;
       } else {
